testdata/baselines/reference/submodule/conformance/jsdocTemplateTag3.errors.txt
a.js(14,10): error TS2339: Property 'a' does not exist on type 'T'.
a.js(14,16): error TS2339: Property 'b' does not exist on type 'T'.
a.js(14,29): error TS2339: Property 'a' does not exist on type 'U'.
a.js(14,35): error TS2339: Property 'b' does not exist on type 'U'.
a.js(14,49): error TS2339: Property 'c' does not exist on type 'V'.


==== a.js (5 errors) ====
    /**
     * @template {{ a: number, b: string }} T,U A Comment
     * @template {{ c: boolean }} V uh ... are comments even supported??
     * @template W
     * @template X That last one had no comment
     * @param {T} t
     * @param {U} u
     * @param {V} v
     * @param {W} w
     * @param {X} x
     * @return {W | X}
     */
    function f(t, u, v, w, x) {
        if(t.a + t.b.length > u.a - u.b.length && v.c) {
             ~
!!! error TS2339: Property 'a' does not exist on type 'T'.
                   ~
!!! error TS2339: Property 'b' does not exist on type 'T'.
                                ~
!!! error TS2339: Property 'a' does not exist on type 'U'.
                                      ~
!!! error TS2339: Property 'b' does not exist on type 'U'.
                                                    ~
!!! error TS2339: Property 'c' does not exist on type 'V'.
            return w;
        }
        return x;
    }
    
    f({ a: 12, b: 'hi', c: null }, undefined, { c: false, d: 12, b: undefined }, 101, 'nope');
    f({ a: 12  }, undefined, undefined, 101, 'nope');
    
    /**
     * @template {NoLongerAllowed}
     * @template T preceding line's syntax is no longer allowed
     * @param {T} x
     */
    function g(x) { }
    
    